todas as rotas testadas e funcionando
